force-app/main/default/objects/Proiect__c/Proiect__c.object-meta.xml
<CustomObject>
    <label>Proiect</label>
    <nameField>
        <label>Denumire proiect</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proiect</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>