force-app/main/default/objects/Proiect__c/fields/Data_acordare_utilaj__c.field-meta.xml
<CustomField>
    <fullName>Data_acordare_utilaj__c</fullName>
    <label>Data acordare utilaj</label>
    <type>Date</type>
</CustomField>