force-app/main/default/objects/Proiect__c/fields/Data_sfarsit_acordare__c.field-meta.xml
<CustomField>
    <fullName>Data_sfarsit_acordare__c</fullName>
    <label>Data sfarsit acordare</label>
    <type>Date</type>
</CustomField>