force-app/main/default/objects/Proiect__c/fields/Existenta_utilaj__c.field-meta.xml
<CustomField>
    <fullName>Existenta_utilaj__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existenta utilaj</label>
    <type>Checkbox</type>
</CustomField>