force-app/main/default/objects/Proiect__c/fields/Faza_proiect__c.field-meta.xml
<CustomField>
    <fullName>Faza_proiect__c</fullName>
    <label>Faza proiect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Constuctie la rosu</fullName>
            </value>
            <value>
                <fullName>Constructia la gri -Interior</fullName>
            </value>
            <value>
                <fullName>Constructia la gri - Exterior</fullName>
            </value>
            <value>
                <fullName>Finisaje interioare</fullName>
            </value>
            <value>
                <fullName>Finisaje exterioare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>