force-app/main/default/objects/Proiect__c/fields/Status_contract_custodie__c.field-meta.xml
<CustomField>
    <fullName>Status_contract_custodie__c</fullName>
    <label>Status contract custodie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La agent</fullName>
            </value>
            <value>
                <fullName>In curs de semnare la client</fullName>
            </value>
            <value>
                <fullName>Semnat</fullName>
            </value>
            <value>
                <fullName>Predat coordonatorului tehnic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>