force-app/main/default/objects/Proiect__c/fields/Tip_utilaj__c.field-meta.xml
<CustomField>
    <fullName>Tip_utilaj__c</fullName>
    <label>Tip utilaj</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pompa airless</fullName>
            </value>
            <value>
                <fullName>Masina tencuiala</fullName>
            </value>
            <value>
                <fullName>Masina gletuit</fullName>
            </value>
            <value>
                <fullName>Masina mortare hidro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>